packages/libs/error-stack/tests/snapshots/test_debug__complex.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Printable A
| @ tests/test_debug.rs:248:38
\-> Root error
    > @ tests/common.rs:140:5

Test
| @ tests/test_debug.rs:259:39
|-> 1 additional attachment
|-> Printable B
|   | @ tests/test_debug.rs:250:42
|   \-> Root error
|       > @ tests/common.rs:140:5
\-> Printable B
    | @ tests/test_debug.rs:256:18
    |-> Root error
    |   > @ tests/common.rs:140:5
    \-> 2 additional attachments
