packages/libs/error-stack/tests/snapshots/test_debug__complex@backtrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

Printable A
| @ tests/test_debug.rs:200:38
|-> Root error
|   \-@ tests/common.rs:140:5
\-> backtrace with 12 frames (1)
    \-@ tests/common.rs:140:5

Test
| @ tests/test_debug.rs:211:39
|-> 1 additional attachment
|-> Printable B
|   | @ tests/test_debug.rs:202:42
|   |-> Root error
|   |   \-@ tests/common.rs:140:5
|   \-> backtrace with 12 frames (3)
|       \-@ tests/common.rs:140:5
\-> Printable B
    | @ tests/test_debug.rs:208:18
    |-> Root error
    |   \-@ tests/common.rs:140:5
    |-> backtrace with 12 frames (5)
    |   \-@ tests/common.rs:140:5
    \-> 2 additional attachments

