packages/libs/error-stack/tests/snapshots/test_debug__complex@spantrace-glyph.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

Printable A
│ 📌 tests/test_debug.rs:194:38
├─▶ Root error
│   ╰ 📌 tests/common.rs:140:5
╰─▶ spantrace with 2 frames (1)
    ╰ 📌 tests/common.rs:140:5

Test
│ 📌 tests/test_debug.rs:205:39
├─▶ 1 additional attachment
├─▶ Printable B
│   │ 📌 tests/test_debug.rs:196:42
│   ├─▶ Root error
│   │   ╰ 📌 tests/common.rs:140:5
│   ╰─▶ spantrace with 2 frames (2)
│       ╰ 📌 tests/common.rs:140:5
╰─▶ Printable B
    │ 📌 tests/test_debug.rs:202:18
    ├─▶ Root error
    │   ╰ 📌 tests/common.rs:140:5
    ├─▶ spantrace with 2 frames (3)
    │   ╰ 📌 tests/common.rs:140:5
    ╰─▶ 2 additional attachments

