packages/libs/error-stack/tests/snapshots/test_debug__complex@spantrace.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---

Printable A
| @ tests/test_debug.rs:190:38
|-> Root error
|   > @ tests/common.rs:140:5
\-> spantrace with 2 frames (1)
    > @ tests/common.rs:140:5

Test
| @ tests/test_debug.rs:201:39
|-> 1 additional attachment
|-> Printable B
|   | @ tests/test_debug.rs:192:42
|   |-> Root error
|   |   > @ tests/common.rs:140:5
|   \-> spantrace with 2 frames (2)
|       > @ tests/common.rs:140:5
\-> Printable B
    | @ tests/test_debug.rs:198:18
    |-> Root error
    |   > @ tests/common.rs:140:5
    |-> spantrace with 2 frames (3)
    |   > @ tests/common.rs:140:5
    \-> 2 additional attachments

